--- a/game/package.json
+++ b/game/package.json
@@ -23,9 +23,11 @@
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^1.0.1",
+    "css-loader": "^3.0.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^1.0.0",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
